@@ -1,8 +1,4 @@
 /*
- * $HeadURL: http://svn.apache.org/repos/asf/httpcomponents/httpcore/trunk/module-main/src/main/java/org/apache/http/params/AbstractHttpParams.java $
- * $Revision: 542224 $
- * $Date: 2007-05-28 06:34:04 -0700 (Mon, 28 May 2007) $
- *
  * ====================================================================
  * Licensed to the Apache Software Foundation (ASF) under one
  * or more contributor license agreements.  See the NOTICE file
@@ -31,20 +27,20 @@
 
 package org.apache.http.params;
 
-import org.apache.http.params.HttpParams;
-
+import java.util.Set;
 
 /**
  * Abstract base class for parameter collections.
  * Type specific setters and getters are mapped to the abstract,
  * generic getters and setters.
  *
- * @author <a href="mailto:oleg at ural.ru">Oleg Kalnichevski</a>
- * @author <a href="mailto:rolandw at apache.org">Roland Weber</a>
- * 
- * @version $Revision: 542224 $
+ * @since 4.0
+ *
+ * @deprecated (4.3) use configuration classes provided 'org.apache.http.config'
+ *  and 'org.apache.http.client.config'
  */
-public abstract class AbstractHttpParams implements HttpParams {
+@Deprecated
+public abstract class AbstractHttpParams implements HttpParams, HttpParamsNames {
 
     /**
      * Instantiates parameters.
@@ -53,64 +49,87 @@ public abstract class AbstractHttpParams implements HttpParams {
         super();
     }
 
-    public long getLongParameter(final String name, long defaultValue) { 
-        Object param = getParameter(name);
+    @Override
+    public long getLongParameter(final String name, final long defaultValue) {
+        final Object param = getParameter(name);
         if (param == null) {
             return defaultValue;
         }
-        return ((Long)param).longValue();
+        return ((Long) param).longValue();
     }
-    
-    public HttpParams setLongParameter(final String name, long value) {
-        setParameter(name, new Long(value));
+
+    @Override
+    public HttpParams setLongParameter(final String name, final long value) {
+        setParameter(name, Long.valueOf(value));
         return this;
     }
 
-    public int getIntParameter(final String name, int defaultValue) { 
-        Object param = getParameter(name);
+    @Override
+    public int getIntParameter(final String name, final int defaultValue) {
+        final Object param = getParameter(name);
         if (param == null) {
             return defaultValue;
         }
-        return ((Integer)param).intValue();
+        return ((Integer) param).intValue();
     }
-    
-    public HttpParams setIntParameter(final String name, int value) {
-        setParameter(name, new Integer(value));
+
+    @Override
+    public HttpParams setIntParameter(final String name, final int value) {
+        setParameter(name, Integer.valueOf(value));
         return this;
     }
 
-    public double getDoubleParameter(final String name, double defaultValue) { 
-        Object param = getParameter(name);
+    @Override
+    public double getDoubleParameter(final String name, final double defaultValue) {
+        final Object param = getParameter(name);
         if (param == null) {
             return defaultValue;
         }
-        return ((Double)param).doubleValue();
+        return ((Double) param).doubleValue();
     }
-    
-    public HttpParams setDoubleParameter(final String name, double value) {
-        setParameter(name, new Double(value));
+
+    @Override
+    public HttpParams setDoubleParameter(final String name, final double value) {
+        setParameter(name, Double.valueOf(value));
         return this;
     }
 
-    public boolean getBooleanParameter(final String name, boolean defaultValue) { 
-        Object param = getParameter(name);
+    @Override
+    public boolean getBooleanParameter(final String name, final boolean defaultValue) {
+        final Object param = getParameter(name);
         if (param == null) {
             return defaultValue;
         }
-        return ((Boolean)param).booleanValue();
+        return ((Boolean) param).booleanValue();
     }
-    
-    public HttpParams setBooleanParameter(final String name, boolean value) {
+
+    @Override
+    public HttpParams setBooleanParameter(final String name, final boolean value) {
         setParameter(name, value ? Boolean.TRUE : Boolean.FALSE);
         return this;
     }
-        
+
+    @Override
     public boolean isParameterTrue(final String name) {
         return getBooleanParameter(name, false);
     }
-        
+
+    @Override
     public boolean isParameterFalse(final String name) {
         return !getBooleanParameter(name, false);
+    }
+
+    /**
+     * {@inheritDoc}
+     * <p>
+     * Dummy implementation - must be overridden by subclasses.
+     *
+     * @since 4.2
+     * @throws UnsupportedOperationException - always
+     */
+    @Override
+    public Set<String> getNames(){
+        throw new UnsupportedOperationException();
     }
 
 } // class AbstractHttpParams
